# mcp-behave

./: .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  analyze.py  honest_server.py  probe.py  pyproject.toml  run.sh
.github/workflows/: ci.yml  publish.yml
probe/: analyze.py  report.py
src/mcp_behave/: __init__.py  analyze.py  cli.py  probe.py  report.py
targets/: leaky_server.py
tests/: conftest.py  test_fixture_servers.py
